--- a/styles/globals.css
+++ b/styles/globals.css
@@ -179,7 +179,7 @@ hr {
 /* headerstart */
 .header {
 	margin: 0 auto;
-	height: 65rem;
+	height: 95vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
