--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,7 +47,7 @@
 	--font-color-primary: #ffffff;
 	--font-color-primary-alt: #000000;
 	--font-color-secondary: rgba(255,255,255, .5);
-	--transparency: rgba(255, 255, 255, 0.1);
+	--transparency: rgba(255, 255, 255, 0.05);
 	--transparency-2: rgba(255, 255, 255, 0.2);
 	--transparency-3: rgba(255, 255, 255, 0.3);
 	--hover: #0d92ff;
@@ -61,7 +61,7 @@
 	--font-color-primary: #000000;
 	--font-color-primary-alt: #ffffff;
 	--font-color-secondary: rgba(0, 0, 0, .6);
-	--transparency: rgba(0, 0, 0, 0.1);
+	--transparency: rgba(0, 0, 0, 0.05);
 	--transparency-2: rgba(0, 0, 0, 0.2);
 	--transparency-3: rgba(0, 0, 0, 0.3);
 	--hover: #0d92ff;
@@ -84,8 +84,13 @@ body {
 	color: var(--font-color-primary);
 }
 
-body::-webkit-scrollbar{
-	display: none;
+::-webkit-scrollbar{
+	width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: var(--transparency-2);
+	/* border-radius: 1rem; */
 }
 
 a {
@@ -266,7 +271,8 @@ button a {
 
 /* aboutmestart */
 .aboutme {
-	width:fit-content;
+	width: fit-content;
+	padding: 10rem 0;
 }
 
 .heading {
@@ -313,10 +319,12 @@ button a {
 .project {
 	display: flex;
 	margin: 5rem 0;
+	background-color: var(--transparency);
+	border-radius: 1rem;
 }
 
 .project .project-thumb {
-	width: 30rem;
+	width: 40rem;
 	height: 15rem;
 }
 
@@ -324,7 +332,11 @@ button a {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	margin: 0 5rem;
+	margin: 2rem 5rem;
+}
+
+.project-desc .feature-name {
+	margin: 2rem 0;
 }
 
 
