--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,6 +61,7 @@
 	--transparency-3: rgba(0, 0, 0, 0.5);
 	--hover: #0d92ff;
 }
+
 @media only screen and (max-width: 965px) {
 	.m\:hide {
 		display: none;
@@ -86,11 +87,11 @@ html {
 
 
 body {
-	padding: 0 2rem;
+	padding: 0 5rem;
+	max-width: 100rem;
 	transition: all 0.2s;
 	margin: 0 auto;
-	font-family: SFPro, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: SFPro, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	background-color: var(--background-color);
 	color: var(--font-color-primary);
 }
@@ -133,7 +134,7 @@ hr {
 .nav {
 	display: flex;
 	margin: 0 auto;
-	max-width: 100rem;
+	/* max-width: 100rem; */
 	height: 6.8rem;
 	justify-content: space-between;
 	list-style-type: none;
@@ -147,7 +148,7 @@ hr {
 
 .nav .brand {
 	width: max-content;
-	padding: 0px 3rem;
+	padding: 0 3rem 0 0;
 	font-size: 2rem;
 	list-style-type: none;
 	font-family: "PoppinsSemibold";
@@ -155,10 +156,9 @@ hr {
 
 .nav .navlinks {
 	transition: all 0.25s;
-	margin: 0 2rem;
+	margin: 0 0 0 4rem;
 	text-decoration: none;
 }
-
 
 
 .nav .social {
@@ -179,16 +179,16 @@ hr {
 
 
 .main {
-	padding: 2.5rem;
+	/* padding: 0 2rem; */
 	max-width: 100rem;
-	margin: 0 auto;
+	/* margin: 0 auto; */
 	font-size: 1.6rem;
 }
 
 
 /* headerstart */
 .header {
-	margin: 0 auto;
+	/* margin: 0 auto; */
 	height: 95vh;
 	display: flex;
 	flex-direction: column;
@@ -300,10 +300,9 @@ button a {
 	}
 }
 
-
 .techstack {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 @media only screen and (max-width: 768px) {
@@ -312,14 +311,11 @@ button a {
 		grid-template-columns: 1fr 1fr;
 	}
 }
-
-.two-column-grid {
-	width: 40rem;
-	grid-template-columns: 1fr 1fr;
-}
-.three-column-grid {
-	width: 60rem;
-	grid-template-columns: 1fr 1fr 1fr;
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+	.techstack {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+	}
 }
 
 .aboutme .techstack .tech-grid {
@@ -331,6 +327,10 @@ button a {
 .tech-grid span {
 	display: flex;
 	margin: .5rem;
+}
+
+.techstack-icon {
+	width: 2.5rem;
 }
 
 /* aboutmeend */
@@ -626,7 +626,7 @@ button a {
 	font-family: "PoppinsSemibold";
 	font-size: 2rem;
 	align-self: center;
-	padding: 0px 3rem;
+	padding: 0 3rem 0 0;
 }
 
 .footer .group {
