--- a/styles/globals.css
+++ b/styles/globals.css
@@ -351,9 +351,14 @@ button {
 
 /* aboutmestart */
 .aboutme {
-	/* width: fit-content; */
 	font-size: 1.8rem;
 	padding: 10rem 0;
+}
+
+@media only screen and (max-width: 768px){
+	.aboutme {
+		padding: 0;
+	}
 }
 
 .heading {
