--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,6 +57,10 @@
 	--transparency-level-3: rgba(255, 255, 255, 0.5);
 	--hover: #0d92ff;
 	--width: 140rem;
+	--corner-radius: .75rem;
+	--project-1: url("../public/projects/gpt_dark.png");
+	--project-2: url("../public/projects/indiaAtStats.png");
+	--project-3: url("../public/projects/search-enigne-dark.png");
 }
 
 .light {
@@ -72,6 +76,10 @@
 	--transparency-level-3: rgba(0, 0, 0, 0.5);
 	--hover: #0d92ff;
 	--width: 140rem;
+	--corner-radius: .75rem;
+	--project-1: url("../public/projects/gpt_light.png");
+	--project-2: url("../public/projects/indiaAtStats.png");
+	--project-3: url("../public/projects/search-enigne-light.png");
 }
 
 @media only screen and (max-width: 965px) {
@@ -288,7 +296,7 @@ hr {
 	color: var(--font-color-primary-alt);
 	background-color: var(--font-color-primary);
 	font-size: 6rem;
-	border-radius: .75rem;
+	border-radius: var(--corner-radius);
 	transition: all .5s;	
 }
 
@@ -328,7 +336,7 @@ hr {
 	height: 4rem;
 	background-color: var(--transparency-level-1);
 	color: var(--font-color-primary);
-	border-radius: .5rem;
+	border-radius: var(--corner-radius);
 	transition: all 0.5s;
 	cursor: pointer;
 }
@@ -370,7 +378,7 @@ button {
 	margin: 4rem 0;
 }
 
-.heading::after {
+.aboutme .heading::after {
 	position: absolute;
 	content: '';
 	height: 1px;
@@ -421,68 +429,91 @@ button {
 
 /* aboutmeend */
 
-/* projectsstart */
-
-.projects {
-	margin-top: 21rem;
+.projects h1 {
+	display: block;
+	font-size: 4.8rem;
+	margin: 1rem 0;
+	z-index: -1;
+	font-family: "PoppinsSemibold";
 }
 
-.project {
+.projects-grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr 1fr;
+	height: 70rem;
+	gap: 2rem;
+}
+
+.projects-grid > a {
+	border-radius: var(--corner-radius);
+	padding: 3rem;
 	display: flex;
-	margin: 5rem 0;
-	background-color: var(--transparency-level-1);
-	border-radius: 1rem;
-}
-
-.project .project-thumb {
-	position: relative;
-	width: 100%;
-	height: auto;
-}
-
-.project .project-desc {
-	display: flex;
-	width: 100rem;
 	flex-direction: column;
-	justify-content: center;
-	margin: 2rem 5rem;
-}
-
-.project-desc .feature-name {
-	/* color: var(--hover); */
-	font-family: 'InterMedium';
-	font-size: 2.4rem;
-	margin: 2rem 0;
-}
-
-
-.project:nth-of-type(even) {
-	flex-direction: row-reverse;
-	text-align: right;
-}
-
-.project:nth-of-type(odd) img {
-	border-radius: 1rem 0 0 1rem;
-}
-.project:nth-of-type(even) img {
-	border-radius: 0 1rem 1rem 0;
-}
-
-.project:nth-of-type(even) .feature-tags {
 	justify-content: flex-end;
 }
-.project:nth-of-type(odd) .feature-tags {
-	justify-content: flex-start;
+
+
+.projects-grid .p-1 {
+	grid-column: 1/2;
+	grid-row: 1/5;
+	background-image: var(--project-1);
+	background-position: 85% 0%;
+	background-size: cover;
+	transition: all .5s;
 }
 
-.project:last-child {
-	margin: 0 0 15rem 0 ;
+.projects-grid .p .title {
+	font-size: 4rem;
 }
 
-/* projectsend */
+.projects-grid .p .description {
+	font-size: 2rem;
+}
+.projects-grid .p svg {
+	height: 3rem;
+	width: 3rem;
+	margin: 1rem 0;
+	transition: all .5s;
+}
+
+.projects-grid .p-2 {
+	grid-column: 2/3;
+	grid-row: 1/3;
+	background-image: var(--project-2);
+	background-position: 100% 20%;
+	background-size: cover;
+	background-repeat: no-repeat;
+	transition: all .5s;
+	display: flex;
+	flex-direction: column-reverse;
+}
+.projects-grid .p-2 .title {
+	font-weight: 900;
+	font-size: 3rem;
+}
+
+.projects-grid .p-3 {
+	grid-column: 2/3;
+	grid-row: 3/5;
+	background-image: var(--project-3);
+	background-position: 100% 0%;
+	background-size: cover;
+	transition: all .5s;
+
+}
+.projects-grid .p-3 .title {
+	font-size: 3rem;
+}
+
+.projects-grid .p-4 {
+	grid-column: 3/4;
+	grid-row: 1/3;
+	transition: all .5s;
+	background-color: var(--transparency-level-1)
+}
 
 /* blogindexstart */
-
 
 .blogs h1 {
 	display: block;
@@ -501,7 +532,7 @@ button {
 	background-color: var(--transparency-level-1);
 	color: var(--font-color-primary);
 	font-family: "SFPro";
-	border-radius: 0.5rem;
+	border-radius: var(--corner-radius);
 	margin-bottom: 1rem;
 }
 
@@ -519,7 +550,7 @@ button {
   flex-direction: column;
   font-size: 1.4rem;
   background-color: var(--transparency-level-1);
-  border-radius: 1rem;
+  border-radius: var(--corner-radius);
   height: 30rem;
   box-shadow: 0rem 0rem 4rem rgba(0, 0, 0, 0.075);
 }
@@ -531,7 +562,7 @@ button {
 .main .blog-posts .blog-cards .blog-thumb {
   height: 100rem;
   background-color: var(--transparency-level-1);
-  border-radius: 1rem;
+  border-radius: var(--corner-radius);
 }
 
 .main .blog-posts .blog-cards .blog-details {
