--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,14 +105,16 @@ html {
 	scrollbar-width: none;
 }
 
+html,
+body {
+  padding: 0;
+  margin: 0;
+  transition: all .5s;
+	cursor: default;
+  font-family: SFPro;
+}
 
 body {
-	padding: 0 4rem;
-	max-width: var(--width);
-	transition: all 0.3s;
-	margin: 0 auto;
-	cursor: default;
-	font-family: SFPro, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	background-color: var(--background-color);
 	color: var(--font-color-primary);
 	overflow-x: hidden;
@@ -155,7 +157,7 @@ hr {
 /* navstart */
 .nav {
 	display: flex;
-	margin: 0 auto;
+	margin: 0 5rem;
 	background-color: transparent;
 	height: 10rem;
 	justify-content: space-between;
@@ -173,13 +175,21 @@ hr {
 	background-color: var(--transparency-level-1);
 }
 
-
 .nav .brand {
 	width: max-content;
 	padding: 0 3rem 0 0;
 	font-size: 2rem;
 	list-style-type: none;
 	font-family: "PoppinsSemibold";
+}
+
+@media only screen and (max-width: 768px){
+	.nav {
+		margin: 0 3rem;
+	}
+	.nav .brand {
+		font-size: 1.6rem;
+	}
 }
 
 .nav .navlinks {
@@ -214,24 +224,41 @@ hr {
 
 
 .main {
+	display: flex;
+	flex-direction: column;
 	font-size: 1.6rem;
+	/* align-items: center; */
 	min-height: 100vh;
+	max-width: var(--width);
+	margin: 0 auto;
 }
 
 .header {
 	display: flex;
 	flex-direction: row;
+	margin: 0 5rem;
 }
 
 .v-nav {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 35rem;
+	/* width: 35rem; */
+	margin-right: 10rem;
 	font-size: 5rem;
 	font-family: SFMono;
 	line-height: 10rem;
 	position: relative;
+}
+
+@media only screen and (max-width: 768px){
+	.header {
+		margin: 0 3rem;
+	}
+	.v-nav {
+		font-size: 4rem;
+		line-height: 8rem;
+	}
 }
 
 .header-view {
@@ -295,7 +322,7 @@ hr {
 	font-family: "Overpass";
 	color: var(--font-color-primary-alt);
 	background-color: var(--font-color-primary);
-	font-size: 6rem;
+	font-size: 4rem;
 	border-radius: var(--corner-radius);
 	transition: all .5s;	
 }
@@ -320,11 +347,10 @@ hr {
 }
 
 .header-view .contact-buttons {
-	display: flex;
-}
-
-.header-view .contact-buttons a {
-	margin: 0 .5rem;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: .7rem;
+	width: 30rem;
 }
 
 .contact-buttons button {
@@ -347,6 +373,14 @@ button {
 	justify-content: center;
 }
 
+@media only screen and (max-width: 320px){
+	.header-view .contact-buttons {
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 1fr 1fr;
+		width: 20rem;
+	}
+}
+
 .header-view button:hover {
 	background-color: var(--transparency-level-2);
 }
@@ -365,11 +399,13 @@ button {
 .aboutme {
 	font-size: 1.8rem;
 	padding: 10rem 0;
+	margin: 0 5rem;
 }
 
 @media only screen and (max-width: 768px){
 	.aboutme {
 		padding: 0;
+		margin: 0 3rem;
 	}
 }
 
@@ -383,14 +419,14 @@ button {
 	content: '';
 	height: 1px;
 	background-color: var(--transparency-level-2);
-	width: 35rem;
+	width: 15rem;
 	margin-left: 25px;
 	top: 50%;
 }
 
-@media only screen and (max-width: 768px) {
-	.heading::after {
-		width: 10rem;
+@media only screen and (max-width: 425px) {
+	.aboutme .heading::after {
+		width: 5rem;
 	}
 }
 
@@ -404,6 +440,13 @@ button {
 	.techstack {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
+		font-size: 1.6rem;
+	}
+}
+
+@media only screen and (max-width: 320px) {
+	.techstack {
+		grid-template-columns: 1fr;
 	}
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
@@ -429,9 +472,19 @@ button {
 
 /* aboutmeend */
 
+.projects {
+	margin: 0 5rem;
+}
+
+@media only screen and (max-width: 768px){
+	.projects {
+		margin: 0 3rem;
+	}
+}
+
 .projects h1 {
 	display: block;
-	font-size: 4.8rem;
+	/* font-size: 4.8rem; */
 	margin: 1rem 0;
 	z-index: -1;
 	font-family: "PoppinsSemibold";
@@ -443,6 +496,15 @@ button {
 	grid-template-rows: 1fr 1fr 1fr 1fr;
 	height: 70rem;
 	gap: 2rem;
+}
+
+@media only screen and (max-width: 768px){
+	.projects-grid {
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-template-rows: 2fr 1fr 1fr 1fr;
+		height: 150rem;
+	}
 }
 
 .projects-grid > a {
@@ -513,7 +575,57 @@ button {
 	background-color: var(--transparency-level-1)
 }
 
+@media only screen and (max-width: 320px){
+	.projects h1 {
+		font-size: 2.4rem;
+	}
+
+	.projects-grid {
+		height: 110rem;
+	}
+}
+
+@media only screen and (max-width: 425px){
+	.projects-grid {
+		height: 120rem;
+	}
+
+	.projects-grid .p-1 {
+		grid-column: 1/2;
+		grid-row: 1/2;
+	}
+
+	.projects-grid .p-1 .title {
+		font-size: 2rem;
+	}
+	.projects-grid .p-1 .description {
+		font-size: 1.4rem;
+	}
+	
+	.projects-grid .p-2 {
+		grid-column: 1/2;
+		grid-row: 2/3;
+		min-height: 25rem;
+	}
+	.projects-grid .p-3 {
+		grid-column: 1/2;
+		grid-row: 3/4;
+		min-height: 25rem;
+	}
+	.projects-grid .p-4 {
+		grid-column: 1/2;
+		grid-row: 4/5;
+		min-height: 10rem;
+	}
+}
+
 /* blogindexstart */
+
+@media only screen and (max-width: 1024px){
+	.blogs{
+		margin: 0 2rem;
+	}
+}
 
 .blogs h1 {
 	display: block;
@@ -526,7 +638,7 @@ button {
 .blogs input {
 	appearance: 0;
 	border: 0;
-	width: 35rem;
+	width: 30rem;
 	height: 4rem;
 	padding: 0 2rem;
 	background-color: var(--transparency-level-1);
@@ -538,9 +650,9 @@ button {
 
 .main .blog-posts {
 	margin-top: 2rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 2rem;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 2rem;
 }
 
 .main .blog-posts .blog-cards {
@@ -730,14 +842,28 @@ button {
 
 
 /* footerstart */
+
+.footer-hero {
+	display: flex;
+	flex-direction: column;
+	max-width: var(--width);
+	margin: 0 auto;
+}
+
+
 .footer {
 	display: flex;
-	/* margin: 0 auto; */
-	max-width: var(--width);
+	margin: 0 5rem;
 	height: 6.8rem;
 	justify-content: space-between;
   list-style-type: none;
 	font-size: 1.4rem;
+}
+
+@media only screen and (max-width: 768px){
+	.footer {
+		margin: 0 3rem;
+	}
 }
 
 .footer .brand {
@@ -799,4 +925,24 @@ button {
 .footer .social:hover {
 	color: var(--hover);
 }
-/* footerend */
+
+@media only screen and (max-width: 390px) {
+	.footer {
+		font-size: 1rem;
+	}
+
+	.footer .brand {
+		font-size: 1.6rem;
+		padding: 0 3rem 0 0;
+	}
+
+	.copyleft-icon {
+		font-size: 2rem;
+		padding: 1rem;
+	}
+
+	.copyleft {
+		margin-right: 0;
+	}
+}
+
