--- a/styles/globals.css
+++ b/styles/globals.css
@@ -758,7 +758,7 @@ button {
   white-space: nowrap;
   background-color: var(--transparency-level-1);
   color: var(--hover);
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   border-radius: 10rem;
   transition: all 1s;
   padding: 0.5rem 1rem;
@@ -835,8 +835,15 @@ button {
 
 .post {
 	min-height: 100vh;
+	margin: 0 5rem;
 }
 
+@media only screen and (max-width: 768px){
+	.post {
+		min-height: 100vh;
+		margin: 0 2rem;
+	}
+}
 
 /* blogpostend */
 
